@@ -65,13 +65,13 @@ public class Main extends JFrame {
     private static Main venice;
 
     /** Short version string, e.g. "0.1a" */
-    public static String SHORT_VERSION = "0.71b";
+    public static String SHORT_VERSION = "0.72b";
 
     /** Longer version string, e.g. "0.1 alpha" */
-    public static String LONG_VERSION = "0.71 beta";
+    public static String LONG_VERSION = "0.72 beta";
 
     /** Release date, e.g. 13/Jan/2003 */
-    public static String RELEASE_DATE = "01/" + Locale.getString("MAR") + "/2010";
+    public static String RELEASE_DATE = "12/" + Locale.getString("MAR") + "/2010";
 
     /** Copyright date range, e.g. "2003-5" */
     public static String COPYRIGHT_DATE_RANGE = "2003-10";
